--- a/01_Presentacion/Views/MasterPages/MasterExtranet.cshtml
+++ b/01_Presentacion/Views/MasterPages/MasterExtranet.cshtml
@@ -9,8 +9,6 @@
     <link rel="icon" href="~/Bootstrap/Extranet/images/favicon.ico">
     <link rel="shortcut icon" href="~/Bootstrap/Extranet/images/favicon.ico" />
 
-    @*<link rel="stylesheet" href="~/Bootstrap/Intranet/css/bootstrap.min.css" />*@
-
     <!-- Font Awesome -->
     <link href="~/Bootstrap/Intranet/vendors/font-awesome/css/font-awesome.min.css" rel="stylesheet">
 
@@ -64,8 +62,8 @@
                                 <ul class="sf-menu">
                                     <li><a href="@Url.Action("Index","Home")">Inicio</a></li>
                                     <li><a href="@Url.Action("Menu","Home")">Menu del día</a></li>
-                                    <li><a href="@Url.Action("Nuevo","Pedido")">Pedido</a></li>
-                                    <li><a href="index-4.html">Contacto</a></li>
+                                    <li><a href="@Url.Action("Main","Pedido")">Pedido</a></li>
+                                    <li><a href="@Url.Action("Contacto","Home")">Contacto</a></li>
                                 </ul>
                             </nav>
                             <div class="clear">&nbsp;</div>
