--- a/01_Presentacion/Views/Home/Contacto.cshtml
+++ b/01_Presentacion/Views/Home/Contacto.cshtml
@@ -9,38 +9,32 @@
     <div class="container">
         <div class="row">
             <div class="grid_12">
-                <h2>Find Us</h2>
+                <h2>Encuentranos</h2>
                 <div class="map">
                     <div class="row">
                         <div class="grid_9">
                             <figure class="">
-                                <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d24214.807650104907!2d-73.94846048422478!3d40.65521573400813!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e0!3m2!1sen!2sus!4v1395650655094" style="border:0"></iframe>
+                                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d987.4650220787347!2d-79.02872547086479!3d-8.115725071961025!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x91ad3d8283ef9b9d%3A0x3cf4dbd6d9431110!2sRestaurant+La+Valentina!5e0!3m2!1ses!2spe!4v1500474031388" width="600" height="450" frameborder="0" style="border:0" allowfullscreen></iframe>
                             </figure>
                         </div>
                         <div class="grid_3">
                             <div class="map_block">
-                                <div class="map_title">Address:</div>
-                                9870 St Vincent Place, <br> Glasgow, DC 45 Fr 45.
+                                <div class="map_title">Dirección:</div>
+                                Jirón Ayacucho 255,<br>Trujillo 13001.
                             </div>
                             <div class="map_block">
-                                <div class="map_title">Phones:</div>
-                                +1 800 559 6580 <br>+1 800 603 6035
+                                <div class="map_title">Telefonos:</div>
+                                229574 <br>
                             </div>
                             <div class="map_block">
                                 <div class="map_title">Email:</div>
-                                <a href="#">mail@demolink.org</a>
+                                <a href="#">Lavalentina_store@hotmail.com</a>
                             </div>
                         </div>
                     </div>
                 </div>
             </div>
-            <div class="grid_8">
-                <p>
-                    24/7 support is on for all <span class="color1 fw"><a href="http://www.templatemonster.com/" rel="nofollow">premium themes</a></span>. <br>
-                    Guys from <span class="color1 fw"><a href="http://www.templatetuning.com/" rel="nofollow">Template Tuning</a></span> are always ready to help you with customization of the chosen theme.
-                </p>
-                Kas facilisis, nulla vel viverra auctor, leo magna sodales felis, quis malesuada nibh odio ut velitoin pharetra luctus diama scelerisque eros convallis accumsan.
-            </div>
+            
         </div>
     </div>
 </section>
